tests/snapshots/conformance__n_number_0.e1.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[0.e1]
stdout --- 
<empty>
stderr --- 
error: expected fraction digit following dot, found `e`
 --> stdin:1:4
  |
1 | [0.e1]
  |  --^
  |  ||
  |  |decimal point found here
  |  number found here
