tests/snapshots/conformance__n_number_0_capital_e.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[0E]
stdout --- 
<empty>
stderr --- 
error: expected +/- or digit after exponent indicator, found `]`
 --> stdin:1:4
  |
1 | [0E]
  |  --^
  |  ||
  |  |exponent indicator found here
  |  number with exponent found here
