tests/snapshots/conformance__n_number_hex_1_digit.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[0x1]
stdout --- 
<empty>
stderr --- 
error: unexpected character `x`. expected start of a json value
 --> stdin:1:3
  |
1 | [0x1]
  |   ^
