tests/snapshots/conformance__n_number_hex_2_digits.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[0x42]
stdout --- 
<empty>
stderr --- 
error: unexpected character `x`. expected start of a json value
 --> stdin:1:3
  |
1 | [0x42]
  |   ^
