tests/snapshots/conformance__n_number_infinity.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[Infinity]
stdout --- 
<empty>
stderr --- 
error: unexpected character `I`. expected start of a json value
 --> stdin:1:2
  |
1 | [Infinity]
  |  ^
